--- a/Memo.html
+++ b/Memo.html
@@ -24,3 +24,13 @@
     &lt;/div&gt;    
 &lt;/main&gt;
 &lt;!-- contents --&gt;
+
+
+<div class="question_result">
+    <div>퀴즈를 완성하셨습니다!! 축하드립니다!</div>
+    <div class="scrore"></div>
+    <div class="buttons">
+        <div class="restart">다시도전하기</div>
+        <div class="quit">끝내기</div>
+    </div>
+</div>
