--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
     <!-- //nav -->
    
     <!-- header -->
-    <div id="header">
+    <div id="header" style="background-color: rgb(163, 233, 198);">
         <div class="container">
             <div class="row">
                 <div class="span12" style="text-align:center;">
                     <div class="header_tit">
-                        <a href="low1ife.github.io"><img src="assets/img/main2.svg" alt="main"></a>
+                        <a href="low1ife.github.io"><img src="assets/img/dino.png" alt="main"></a>
                         <h1>Professional web publishers</h1>
                     </div>
                     <div class="header_icon">
                         <ul>
-                            <li><a href="https://codepen.io/low1ife" target="_blank"><i class="fa fa-codepen" aria-hidden="true"></i><span>codepen</span></a></li>
-                            <li><a href="https://github.com/low1ife" target="_blank"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
-                            <li><a href="https://www.youtube.com/user/zilioner83" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-                            <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble" aria-hidden="true"></i><span>dribbble</span></a></li>
+                            <li ><a href="https://codepen.io/low1ife" target="_blank"  style="background-color: rgb(144, 180, 124);"><i class="fa fa-codepen" aria-hidden="true"></i><span>codepen</span></a></li>
+                            <li><a href="https://github.com/low1ife" target="_blank" style="background-color: rgb(144, 180, 124);"><i class="fa fa-github" aria-hidden="true"></i><span>github</span></a></li>
+                            <li><a href="https://www.youtube.com/user/zilioner83" target="_blank" style="background-color: rgb(144, 180, 124);"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
+                            <li><a href="https://dribbble.com/webstoryboy" target="_blank" style="background-color: rgb(144, 180, 124);"><i class="fa fa-dribbble" aria-hidden="true"></i><span>dribbble</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;김우석 입니다!!!!&quot;</a></p>
+            <p><a href="#" class="tit_btn">&quot;김우석 입니다🌱&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
@@ -183,7 +183,7 @@
                                     <span class="overlay-text-thumb1-donut">클래스</span>
                                     <span class="overlay-text-thumb2-donut">CLASS</span>
                                 </div>
-                                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                                <img src="assets/img/happy.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CLASS</h5>
                                     <p>클래스</p>
@@ -204,7 +204,7 @@
                                     <span class="overlay-text-thumb1-donut">자바스크립트</span>
                                     <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
-                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                                <img src="assets/img/birthday.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JAVASCRIPT</h5>
                                     <p>자바스크립트</p>
@@ -225,7 +225,7 @@
                                     <span class="overlay-text-thumb1-donut">제이쿼리</span>
                                     <span class="overlay-text-thumb2-donut">JQUERY</span>
                                 </div>
-                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                                <img src="assets/img/drawing.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JQUERY</h5>
                                     <p>제이쿼리</p>
@@ -246,7 +246,7 @@
                                     <span class="overlay-text-thumb1-donut">레이아웃</span>
                                     <span class="overlay-text-thumb2-donut">LAYOUT</span>
                                 </div>
-                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                                <img src="assets/img/selfie.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>LAYOUT</h5>
                                     <p>레이아웃</p>
@@ -267,7 +267,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">HTML</span>
                                 </div>
-                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
+                                <img src="assets/img/space.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>HTML</h5>
                                     <p>레퍼런스</p>
@@ -288,7 +288,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">CSS</span>
                                 </div>
-                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
+                                <img src="assets/img/surprise.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CSS</h5>
                                     <p>레퍼런스</p>
@@ -309,7 +309,7 @@
                                     <span class="overlay-text-thumb1-donut">사이트 제작</span>
                                     <span class="overlay-text-thumb2-donut">SITE</span>
                                 </div>
-                                <img src="assets/img/svg-donut.svg" alt="portfolio">
+                                <img src="assets/img/crying.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>SITE</h5>
                                     <p>사이트 제작</p>
@@ -331,7 +331,7 @@
                                     <span class="overlay-text-thumb1-donut">데이터 베이스</span>
                                     <span class="overlay-text-thumb2-donut">mysql</span>
                                 </div>
-                                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                                <img src="assets/img/kiss.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>mysql</h5>
                                     <p>데이터 베이스</p>
@@ -352,7 +352,7 @@
                                     <span class="overlay-text-thumb1-donut">패럴랙스 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">PARALLAX EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/img/dizzy.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PARALLAX EFFECT</h5>
                                     <p>패럴랙스 이펙트</p>
@@ -373,7 +373,7 @@
                                     <span class="overlay-text-thumb1-donut">마우스 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">MOUSE EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/img/in-love.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>MOUSE EFFECT</h5>
                                     <p>마우스 이펙트</p>
@@ -394,7 +394,7 @@
                                     <span class="overlay-text-thumb1-donut">메뉴 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">MENU EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/img/think.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>MENU EFFECT</h5>
                                     <p>메뉴 이펙트</p>
@@ -415,7 +415,7 @@
                                     <span class="overlay-text-thumb1-donut">게임 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">GAME EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/img/sick.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>GAME EFFECT</h5>
                                     <p>게임 이펙트</p>
@@ -436,7 +436,7 @@
                                     <span class="overlay-text-thumb1-donut">슬라이드 이펙트</span>
                                     <span class="overlay-text-thumb2-donut">SLIDER EFFECT</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/img/angry.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>SLIDER EFFECT</h5>
                                     <p>슬라이드 이펙트</p>
@@ -457,7 +457,7 @@
                                     <span class="overlay-text-thumb1-donut">REFERENCE</span>
                                     <span class="overlay-text-thumb2-donut">PHP</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/img/dino.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PHP</h5>
                                     <p>REFERENCE</p>
@@ -478,7 +478,7 @@
                                     <span class="overlay-text-thumb1-donut">소스보기</span>
                                     <span class="overlay-text-thumb2-donut">PHP SOURCE</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/img/happy.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PHP SOURCE</h5>
                                     <p>소스보기</p>
@@ -499,7 +499,7 @@
                                     <span class="overlay-text-thumb1-donut">굿밤</span>
                                     <span class="overlay-text-thumb2-donut">GOOD NIGHT</span>
                                 </div>
-                                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                                <img src="assets/img/birthday.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>GOOD NIGHT</h5>
                                     <p>굿밤</p>
@@ -520,7 +520,7 @@
                                     <span class="overlay-text-thumb1-donut">굿밤 소스보기</span>
                                     <span class="overlay-text-thumb2-donut">GOOD NIGHT SOURCE</span>
                                 </div>
-                                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                                <img src="assets/img/birthday.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>GOOD NIGHT SOURCE</h5>
                                     <p>굿밤 소스보기</p>
@@ -541,7 +541,7 @@
                                     <span class="overlay-text-thumb1-donut">메가박스</span>
                                     <span class="overlay-text-thumb2-donut">MEGABOX</span>
                                 </div>
-                                <img src="assets/img/svg-ice-cupcake.svg" alt="portfolio">
+                                <img src="assets/img/drawing.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>MEGABOX</h5>
                                     <p>메가박스</p>
@@ -562,7 +562,7 @@
                                     <span class="overlay-text-thumb1-donut">리액트</span>
                                     <span class="overlay-text-thumb2-donut">REACT</span>
                                 </div>
-                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <img src="assets/img/selfie.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>REACT</h5>
                                     <p>리액트</p>
@@ -583,7 +583,7 @@
                                 <span class="overlay-text-thumb1-donut">JQUERY</span>
                                 <span class="overlay-text-thumb2-donut">FIGMA</span>
                             </div>
-                            <img src="assets/img/svg-pear.svg" alt="portfolio">
+                            <img src="assets/img/costume.png" alt="portfolio">
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>JQUERY</p>
@@ -604,7 +604,7 @@
                                 <span class="overlay-text-thumb1-donut">SCSS</span>
                                 <span class="overlay-text-thumb2-donut">FIGMA</span>
                             </div>
-                            <img src="assets/img/svg-pizza.svg" alt="portfolio">
+                            <img src="assets/img/costume.png" alt="portfolio">
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>SCSS</p>
@@ -625,7 +625,7 @@
                                 <span class="overlay-text-thumb1-donut">MySQL</span>
                                 <span class="overlay-text-thumb2-donut">FIGMA</span>
                             </div>
-                            <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                            <img src="assets/img/costume.png" alt="portfolio">
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>MySQL</p>
@@ -646,7 +646,7 @@
                                 <span class="overlay-text-thumb1-donut">SCRIPT SAMPLE</span>
                                 <span class="overlay-text-thumb2-donut">FIGMA</span>
                             </div>
-                            <img src="assets/img/svg-fried-chicken.svg" alt="portfolio">
+                            <img src="assets/img/costume.png" alt="portfolio">
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>SCRIPT SAMPLE</p>
@@ -667,7 +667,7 @@
                                 <span class="overlay-text-thumb1-donut">JAVASCRIPT</span>
                                 <span class="overlay-text-thumb2-donut">FIGMA</span>
                             </div>
-                            <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                            <img src="assets/img/costume.png" alt="portfolio">
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>JAVASCRIPT</p>
@@ -688,7 +688,7 @@
                                     <span class="overlay-text-thumb1-donut">SITE</span>
                                     <span class="overlay-text-thumb2-donut">PORTFOLIO</span>
                                 </div>
-                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                                <img src="assets/img/sick.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PORTFOLIO</h5>
                                     <p>SITE</p>
