--- a/refer-effect/sliderEffect/javascriptSE06.html
+++ b/refer-effect/sliderEffect/javascriptSE06.html
@@ -100,14 +100,14 @@
     </style>
 </head>
 
-<body class="bg bg15 brown">
+<body class="bg bg21">
 
     <!-- contents -->
     <main>
         <div class="slider-wrap">
             <div class="slider-img">
                 <div class="slider-inner">
-                    <div class="slider" data-name="이미지1"><img src="../assets/img/bg1.jpg" alt="이미지1"></div>
+                    <div class="slider" data-name="이미지1"><img src="../assets/img/bg21.jpg" alt="이미지1"></div>
                     <div class="slider" data-name="이미지2"><img src="../assets/img/bg2.jpg" alt="이미지2"></div>
                     <div class="slider" data-name="이미지3"><img src="../assets/img/bg3.jpg" alt="이미지3"></div>
                     <div class="slider" data-name="이미지4"><img src="../assets/img/bg4.jpg" alt="이미지4"></div>
