--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             margin-right: 20px;
             margin-top: 40px;
         }
+
+        .header_icon li:hover span {
+            background: rgb(144, 180, 124);
+        }
     </style>
 </head>
 
@@ -108,11 +112,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="http://wooseok98.tistory.com">wooseok</a>
+                <a class="brand" href="http://wooseok98.tistory.com" style="color :rgb(144, 180, 124)">wooseok</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
-                        <li><a href="https://wooseok98.tistory.com/">Tistory</a></li>
-                        <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
+                        <li><a href="https://wooseok98.tistory.com/" style="color :rgb(144, 180, 124)">Tistory</a></li>
+                        <li><a href="https://codepen.io/webstoryboy" style="color :rgb(144, 180, 124)">Codepen</a></li>
                     </ul>
                 </div>
             </div> 
@@ -147,7 +151,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;김우석 입니다🌱&quot;</a></p>
+            <p><a href="#" class="tit_btn" style="color :rgb(144, 180, 124)">&quot;김우석 입니다🌱&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
