--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
                  <!-- box -->
                  <section class="color-shape reference">
-                    <a href="https://www.figma.com/file/Z0ptyfvLgu7a9F2Can4ruo/SCRIPT-REFERENCE?node-id=125%3A106" target="_blank">
+                    <a href="https://www.figma.com/file/JjdwxziJwyjmdrp8ujY2Gp/Javascript-Reference-book?node-id=0%3A1" target="_blank">
                         <div class="image-wrap" style="background-color: #C4EDEB">
                             <div class="hover-wrap">
                                 <span class="overlay-img-donut">FIGMA</span>
@@ -675,6 +675,27 @@
                             <div class="img-text donutImg">
                                 <h5>FIGMA</h5>
                                 <p>JAVASCRIPT</p>
+                                <span>FIGMA</span>
+                            </div>
+                        </div>
+                    </a>
+                </section>
+                <!-- //box -->
+
+                <!-- box -->
+                  <section class="color-shape reference">
+                    <a href="https://www.figma.com/file/WhKSUPIyUYfpFzfLskqKHy/React?node-id=0%3A1" target="_blank">
+                        <div class="image-wrap" style="background-color: #C4EDEB">
+                            <div class="hover-wrap">
+                                <span class="overlay-img-donut">FIGMA</span>
+                                <span class="overlay-text-thumb-donut">REACT</span>
+                                <span class="overlay-text-thumb1-donut">REACT</span>
+                                <span class="overlay-text-thumb2-donut">FIGMA</span>
+                            </div>
+                            <img src="assets/img/costume.png" alt="portfolio">
+                            <div class="img-text donutImg">
+                                <h5>FIGMA</h5>
+                                <p>REACT</p>
                                 <span>FIGMA</span>
                             </div>
                         </div>
