--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                     <span class="overlay-text-thumb1-donut">REFERENCE</span>
                                     <span class="overlay-text-thumb2-donut">PHP</span>
                                 </div>
-                                <img src="assets/img/dino.png" alt="portfolio">
+                                <img src="assets/img/dizzy.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PHP</h5>
                                     <p>REFERENCE</p>
