--- a/blueasy/index.html
+++ b/blueasy/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/font.css">
+
+    <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- webFont -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet">
+
+    <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
 
     <style>
@@ -336,10 +341,10 @@
                             </div>
                             <div class="boardText">
                                 <label for="contact">MASSAGE</label>
-                                <textarea name="msgContent" id="msgContent" rows="13" required></textarea>
+                                <textarea name="msgContent" id="msgContent" cols="40" rows="13" required></textarea>
                             </div>
                         </fieldset>
-                        <button class="msg_btn" type="submit" value="저장">MESSAGE</button>
+                        <button class="msg_btn" type="submit" value="send">MESSAGE</button>
                     </form>
                 </div>
             </div>
