--- a/paydays1/html/create/join.html
+++ b/paydays1/html/create/join.html
@@ -84,25 +84,27 @@
                             <label for="youName">이름</label>
                             <input type="text" name="youName" id="youName" maxlength="5" placeholder="이름 입력" autocomplete="off" required>
                         </li>
-                        <ul>
-                            <li class="birth">
-                                <label for="youBirth">생년월일</label>
-                                <input type="text" name="youBirth" id="youBirth"maxlength="8" placeholder="예: 19810219" autocomplete="off" required>
-                            </li>
-                            <li class="jender">
-                                <label for="youName">성별</label>
-                                <div>
-                                    <span>
-                                        <input type="radio" name="radio" id="radio1" class="input-radio">
-                                        <label for="radio1" class="form-radio">남자</label>
-                                    </span>
-                                    <span>
-                                        <input type="radio" name="radio" id="radio2" class="input-radio">
-                                        <label for="radio2" class="form-radio">여자</label>
-                                    </span>
-                                </div>
-                            </li>
-                        </ul>
+                        <li class="user">
+                            <ul>
+                                <li class="birth">
+                                    <label for="youBirth">생년월일</label>
+                                    <input type="text" name="youBirth" id="youBirth" maxlength="8" placeholder="예: 19810219" autocomplete="off" required>
+                                </li>
+                                <li class="jender">
+                                    <label for="youName">성별</label>
+                                    <div>
+                                        <span>
+                                            <input type="radio" name="radio" id="radio1" class="input-radio">
+                                            <label for="radio1" class="form-radio">남자</label>
+                                        </span>
+                                        <span>
+                                            <input type="radio" name="radio" id="radio2" class="input-radio">
+                                            <label for="radio2" class="form-radio">여자</label>
+                                        </span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="agency">
                             <label for="youAgency">통신사선택</label>
                             <ul class="agencyList">
