--- a/paydays1/html/create/join.html
+++ b/paydays1/html/create/join.html
@@ -106,7 +106,10 @@
                             </ul>
                         </li>
                         <li class="agency">
-                            <label for="youAgency">통신사선택</label>
+                            <label for="youAgency">
+                                통신사 선택
+                                <input type="hidden" id="youAgency">
+                            </label>
                             <ul class="agencyList">
                                 <li>SKT</li>
                                 <li>KT</li>
